Fixing loss of focus when opening a URL in a new tab.  If we receive a focus event and have not done an initial reflow yet, go ahead and do one so that we can dispatch the event.  Otherwise, the focus controller becomes out of sync with the actual native widget focus.  Bug 138237, r=dbaron, sr=waterson, a=asa.